plugins {
    id 'dev.architectury.loom' version '1.7-SNAPSHOT' apply false
    id 'architectury-plugin' version '3.4.162'
    id 'com.github.johnrengelman.shadow' version '8.1.1' apply false
}

architectury {
    minecraft = project.minecraft_version
}

allprojects {
    group = rootProject.maven_group
    version = rootProject.mod_version
}

subprojects {
    apply plugin: 'dev.architectury.loom'
    apply plugin: 'architectury-plugin'
    apply plugin: 'maven-publish'

    base {
        // Set up a suffixed format for the mod jar names, e.g. `example-fabric`.
        archivesName = "$rootProject.archives_name-$project.name"
    }

    repositories {
        // Add repositories to retrieve artifacts from in here.
        // You should only use this when depending on other mods because
        // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
        // See https://docs.gradle.org/current/userguide/declaring_repositories.html
        // for more information about repositories.
//        maven {
//            name = 'ParchmentMC'
//            url = 'https://maven.parchmentmc.org'
//        }
        maven {
            name = "Modrinth"
            url = "https://api.modrinth.com/maven"
        }
        maven { url = uri("https://oss.sonatype.org/content/groups/public/") }
        maven {
            name = "TerraformersMC"
            url = "https://maven.terraformersmc.com/"
        }
        maven {
            name = "Ladysnake Libs"
            url = 'https://maven.ladysnake.org/releases'
        }
        maven {
            name = 'GeckoLib'
            url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
            content {
                includeGroup("software.bernie.geckolib")
                includeGroup("com.eliotlash.mclib")
            }
        }

        maven { url 'https://jitpack.io' }
        flatDir {
            dirs 'libs'
        }
    }

    loom {
        silentMojangMappingsLicense()
    }

    dependencies {
        minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
        mappings loom.layered() {
            officialMojangMappings()
            // parchment("org.parchmentmc.data:parchment-1.21.1:2024.11.17@zip") // ParchmentMC版本，目前最新2024.11.17
        }

        modCompileOnly("me.lucko:fabric-permissions-api:0.3.1") {
            transitive = false
        }
        modImplementation "net.fabricmc.fabric-api:fabric-api:$rootProject.fabric_api_version"

        implementation "com.github.CSneko:NekoAI:$rootProject.nekoai_version"

        compileOnly("io.netty:netty-codec-http:4.1.117.Final") {
            transitive = false
        }

        compileOnly("io.netty:netty-handler-proxy:4.1.117.Final") {
            transitive = false
        }

        implementation 'com.github.umjammer:jlayer:1.0.3'

        compileOnly("org.projectlombok:lombok:1.18.38")
        annotationProcessor("org.projectlombok:lombok:1.18.38")

        implementation 'dev.architectury:architectury-transformer:5.2.88'

        modCompileOnly "dev.emi:emi-xplat-intermediary:${emi_version}:api"
    }

    java {
        // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
        // if it is present.
        // If you remove this line, sources will not be generated.
        withSourcesJar()

        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 17
    }

    // Configure Maven publishing.
    publishing {
        publications {
            mavenJava(MavenPublication) {
                artifactId = base.archivesName.get()
                from components.java
            }
        }

        // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
        repositories {
            // Add repositories to publish to here.
            // Notice: This block does NOT have the same function as the block in the top level.
            // The repositories here will be used for publishing your artifact, not for
            // retrieving dependencies.
        }
    }
}
